2008-10-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnml.el (nnml-request-expire-articles): Check if the function set to
	`nnmail-expiry-target' returns the symbol `delete'.

	* nnfolder.el (nnfolder-request-expire-articles): Ditto.

	* nnmail.el (nnmail-expiry-target): Fix custom type.

2008-10-02  Glenn Morris  <rgm@gnu.org>

	* mm-util.el (mm-codepage-setup): Tweak codepage error.
	Silence compiler warning.

2008-09-30  Chong Yidong  <cyd@stupidchicken.com>

	* mml.el (mml-menu): Don't assume mml2015 is bound.

2008-09-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-read-summary-keys): Check if summary window
	exists.

2008-09-27  Glenn Morris  <rgm@gnu.org>

	* gnus-util.el (mail-header-remove-comments): Autoload it.

2008-09-27  Andreas Schwab  <schwab@suse.de>

	* gnus-util.el (gnus-split-references): Strip comments.
	(gnus-parent-id): Likewise.

2008-09-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-confirm-send): Fix version.

2008-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-idna-to-ascii-rhs-1): Use
	mail-extract-address-components rather than mail-header-parse-addresses
	that is an alias by default to ietf-drums-parse-addresses that does not
	support non-ASCII names in headers' contents.

2008-09-25  Teodor Zlatanov  <tzz@lifelogs.com>

	* message.el (message-confirm-send): Fixed variable documentation to
	avoid the "y/n" wording.

2008-09-25  Francis Litterio  <flitterio@gmail.com>  (tiny change)

	* message.el (message-set-auto-save-file-name): Save to a different
	filename so multiple messages (especially drafts) can be recovered.

2008-09-24  Teodor Zlatanov  <tzz@lifelogs.com>

	* message.el (message-confirm-send): Add appropriate version.

2008-09-22  Teodor Zlatanov  <tzz@lifelogs.com>

	* mm-view.el (mm-pkcs7-enveloped-magic): Fix extra parenthesis in
	defvar.

2008-09-22  Daiki Ueno  <ueno@unixuser.org>

	* mm-view.el (mm-pkcs7-signed-magic): Use literals.